--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,9 @@
 ---
-import Nav from '../components/NavBaar.astro';
-import Layout from '../layouts/Layout.astro';
-
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<Nav />
-	<h1>Hola a todos</h1>
-	</main>
+  <main></main>
 </Layout>
 
-<style>
-
-</style>
+<style></style>
