--- a/src/layouts/HeaderNav.astro
+++ b/src/layouts/HeaderNav.astro
@@ -1,11 +1,18 @@
-  <nav class="bg-white border-gray-200">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3">
-      <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      
+---
+import CarShopIcon from "../components/icons/CarShopIcon.astro";
+---
+
+<header>
+  <nav>
+    <div
+      class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3"
+    >
+      <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <CarShopIcon class="h-12" />
       </a>
       <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
         <a
-          href="/login"
+          href="#"
           type="button"
           class="text-white bg-[#100E34] hover:bg-bg-[#100E34] focus:outline-none font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-[#a2001e] dark:hover:bg-[#BE0022]"
         >
@@ -31,8 +38,7 @@
               stroke-linecap="round"
               stroke-linejoin="round"
               stroke-width="2"
-              d="M1 1h15M1 7h15M1 13h15"
-            />
+              d="M1 1h15M1 7h15M1 13h15"></path>
           </svg>
         </button>
       </div>
@@ -45,20 +51,23 @@
         >
           <li>
             <a
-              href="/"
+              href="#"
               class="block py-2 px-3 md:p-0 bg-blue-100 rounded md:bg-transparent md:dark:text-gray-400 hover:text-blue-700"
               aria-current="page"
-              >Inico</a
             >
+              Inico
+            </a>
           </li>
           <li>
             <a
-              href="/catalogo"
+              href="#"
               class="block py-2 px-3 md:p-0 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-gray-400 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-              >Catalogo</a
             >
+              Catalogo
+            </a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+</header>
