--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import WelcomeSection from "@components/WelcomeSection.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main></main>
+  <main>
+    <WelcomeSection />
+  </main>
 </Layout>
 
 <style></style>
