--- a/src/layouts/HeaderNav.astro
+++ b/src/layouts/HeaderNav.astro
@@ -1,4 +1,5 @@
 ---
+import UserIcon from "@components/icons/UserIcon.astro";
 import CarShopIcon from "../components/icons/CarShopIcon.astro";
 ---
 
@@ -17,6 +18,7 @@ import CarShopIcon from "../components/icons/CarShopIcon.astro";
           class="text-white bg-[#100E34] hover:bg-bg-[#100E34] focus:outline-none font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-[#a2001e] dark:hover:bg-[#BE0022]"
         >
           Iniciar Sesión
+          <UserIcon />
         </a>
         <button
           data-collapse-toggle="navbar-cta"
@@ -47,7 +49,7 @@ import CarShopIcon from "../components/icons/CarShopIcon.astro";
         id="navbar-cta"
       >
         <ul
-          class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-700 rounded-lg bg-gray-700 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:border-gray-700"
+          class="flex flex-col text-md font-semibold p-4 md:p-0 mt-4 border border-gray-700 rounded-lg bg-gray-700 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:border-gray-700"
         >
           <li>
             <a
