--- a/src/components/WelcomeSection.astro
+++ b/src/components/WelcomeSection.astro
@@ -33,7 +33,7 @@ import MclarenLogo from "./logos/MclarenLogo.astro";
 
       <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
         <a
-          href="https://github.com/themesberg/landwind"
+          href="#"
           class="inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-white-900 border rounded-full sm:w-auto hover:bg-black-300 bg-black"
         >
           Ordena ahora!
