--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import SellCars from "@components/SellCars.astro";
 import Layout from "../layouts/Layout.astro";
 import WelcomeSection from "@components/WelcomeSection.astro";
 ---
@@ -6,6 +7,9 @@ import WelcomeSection from "@components/WelcomeSection.astro";
 <Layout title="Welcome to Astro.">
   <main>
     <WelcomeSection />
+    <section>
+      <SellCars />
+    </section>
   </main>
 </Layout>
 
