--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,7 @@ import WelcomeSection from "@components/WelcomeSection.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
-
-  </main>
+  <main></main>
 </Layout>
 
 <style></style>
