--- a/src/components/CardsBlogs.astro
+++ b/src/components/CardsBlogs.astro
@@ -1,6 +1,6 @@
 <h3 class="text-2xl font-bold mb-10 text-center text-gray-900 mt-20">Blogs</h3>
 
-<div class="flex flex-wrap justify-center gap-4">
+<div class="flex flex-wrap justify-center gap-4 mb-10">
   <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
     <img class="rounded-lg mb-5" src="../../public/img/ch-2.webp" alt="" />
     <p
