avance en secciones y retocado de acorde a la maqueta

--- a/src/components/CardsBlogs.astro
+++ b/src/components/CardsBlogs.astro
@@ -1,37 +1,40 @@
-<h3 class="text-2xl font-bold mb-10 text-center text-gray-900 mt-20">Blogs</h3>
+<section class="bg-gray-100 py-8">
+  <h3 class="text-4xl font-bold mb-10 text-center text-gray-900 mt-26">
+    Blogs
+  </h3>
 
-<div class="flex flex-wrap justify-center gap-4 mb-10">
-  <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
-    <img class="rounded-lg mb-5" src="../../public/img/ch-2.webp" alt="" />
-    <p
-      class="mb-3 font-normal text-gray-500 dark:text-gray-400"
-      style="text-align: justify;"
-    >
-      Is the 2024 Porsche Cayenne S a Good SUV? 4 Pros and 3 Cons
-    </p>
+  <div class="flex flex-wrap justify-center gap-4 mb-10 bg-gray-100">
+    <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
+      <img class="rounded-lg mb-5" src="../../public/img/ch-2.webp" alt="" />
+      <p
+        class="mb-3 font-normal text-gray-500 dark:text-gray-400"
+        style="text-align: justify;"
+      >
+        Is the 2024 Porsche Cayenne S a Good SUV? 4 Pros and 3 Cons
+      </p>
+    </div>
+
+    <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
+      <img class="rounded-lg mb-5" src="../../public/img/ch-1.webp" alt="" />
+      <p
+        class="mb-3 font-normal text-gray-500 dark:text-gray-400"
+        style="text-align: justify;"
+      >
+        Compact Steamroller: 2024 Toyota RAV4 Starts at $29,825
+      </p>
+    </div>
+
+    <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
+      <img class="rounded-lg mb-5" src="../../public/img/ch-3.webp" alt="" />
+      <p
+        class="mb-3 font-normal text-gray-500 dark:text-gray-400"
+        style="text-align: justify;"
+      >
+        2024 Kia Niro EV Costs $50 More, Nearly Unchanged Otherwise
+      </p>
+    </div>
   </div>
-
-  <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
-    <img class="rounded-lg mb-5" src="../../public/img/ch-1.webp" alt="" />
-    <p
-      class="mb-3 font-normal text-gray-500 dark:text-gray-400"
-      style="text-align: justify;"
-    >
-      Compact Steamroller: 2024 Toyota RAV4 Starts at $29,825
-    </p>
-  </div>
-
-  <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
-    <img class="rounded-lg mb-5" src="../../public/img/ch-3.webp" alt="" />
-    <p
-      class="mb-3 font-normal text-gray-500 dark:text-gray-400"
-      style="text-align: justify;"
-    >
-      2024 Kia Niro EV Costs $50 More, Nearly Unchanged Otherwise
-    </p>
-  </div>
-</div>
-
+</section>
 <style>
   .card {
     background: transparent; /* Color de fondo con opacidad */
