--- a/src/components/OurServies.astro
+++ b/src/components/OurServies.astro
@@ -1,12 +1,12 @@
-<h3 class="text-2xl font-bold mb-10 text-center text-gray-900">
+<h3 class="text-4xl font-bold mb-10 text-center text-gray-900">
   Nuestros servicios
 </h3>
-<p class="text-gray-600 text-center mb-10">
+<p class="text-gray-600 text-center mb-10 text-xl">
   Brindamos una amplia gama de servicios de alta calidad para ti, asegurándote
   los mejores beneficios aquí.
 </p>
-<div class="flex flex-wrap justify-center gap-4">
-  <div class="max-w-sm p-6 border border-gray-200 rounded-lg shadow-lg card">
+<div class="flex flex-wrap justify-center gap-4 py-4">
+  <div class="max-w-sm p-6 rounded-lg shadow-lg card">
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
       viewBox="0 0 24 24"
@@ -70,8 +70,7 @@
       </h5>
     </a>
     <p
-      class="mb-3 font-normal text-gray-500 dark:text-gray-400"
-      style="text-align: justify;"
+      class="mb-3 font-normal text-gray-500 dark:text-gray-400 text-justify mt-6"
     >
       Descubre la elegancia en nuestra plataforma líder de Compras y Ventas de
       autos de lujo. Encuentra tu vehículo perfecto con nosotros.
@@ -80,12 +79,10 @@
 
   <div
     class="max-w-sm
-      p-6
-      border
-      border-gray-300
-      rounded-lg
-      shadow-lg
-      card"
+        p-6
+        rounded-lg
+        shadow-lg
+        card"
   >
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
@@ -133,15 +130,14 @@
       </h5>
     </a>
     <p
-      class="mb-3 font-normal text-gray-500 dark:text-gray-400"
-      style="text-align: justify;"
+      class="mb-3 font-normal text-gray-500 dark:text-gray-400 text-justify mt-6"
     >
       Sencillez en cada transacción.Disfruta de un pago fácil y conveniente.
       Descubre el lujo sin complicaciones, encuentra tu vehículo perfecto ahora.
     </p>
   </div>
 
-  <div class="max-w-sm p-6 border border-gray-300 rounded-lg shadow-lg card">
+  <div class="max-w-sm p-6 rounded-lg shadow-lg card">
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
       viewBox="0 0 40 40"
@@ -186,7 +182,9 @@
         Fácil de usar
       </h5>
     </a>
-    <p class="mb-3 font-normal text-gray-500" style="text-align: justify;">
+    <p
+      class="mb-3 font-normal text-gray-500 dark:text-gray-400 text-justify mt-6"
+    >
       Simplicidad en tus manos. Nuestra plataforma no solo ofrece vehículos
       excepcionales, sino también una experiencia fácil de usar.
     </p>
@@ -195,9 +193,9 @@
 
 <style>
   .card {
-    background: transparent; /* Color de fondo con opacidad */
+    background: white; /* Color de fondo con opacidad */
     backdrop-filter: blur(10px); /* Efecto de desenfoque */
-    transition: transform 0.2s ease-in-out;
+    transition: transform 0.4s ease-in-out;
   }
 
   .card:hover {
