--- a/src/components/WelcomeSection.astro
+++ b/src/components/WelcomeSection.astro
@@ -60,7 +60,7 @@ import AudiLogo from "./logos/AudiLogo.astro";
     <h1
       class="text-4xl mb-14 flex justify-center items-center text-center font-md mt-4 text-main-red font-bold"
     >
-      Se la chupo a Astro perdoname por todo astro god
+      Marcas
     </h1>
     <div
       class="grid grid-cols-2 gap-6 text-gray-400 sm:gap-12 sm:grid-cols-3 lg:grid-cols-6"
