--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import WelcomeSection from "@components/WelcomeSection.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Car Dealership">
   <main></main>
 </Layout>
 
