--- a/src/components/CardsBlogs.astro
+++ b/src/components/CardsBlogs.astro
@@ -1,8 +1,10 @@
 <section class="bg-gray-100 py-8">
-  <h3 class="text-4xl font-bold mb-10 text-center text-gray-900 mt-26">
-    Blogs
-  </h3>
-
+  <div class="flex items-center justify-center mb-20 mx-auto">
+    <!-- Modifica esta línea -->
+    <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+    <h3 class="text-4xl px-3 flex font-md text-main-blue font-bold">Blogs</h3>
+    <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+  </div>
   <div class="flex flex-wrap justify-center gap-4 mb-10 bg-gray-100">
     <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
       <img class="rounded-lg mb-5" src="../../public/img/ch-2.webp" alt="" />
