--- a/src/components/OurServies.astro
+++ b/src/components/OurServies.astro
@@ -1,6 +1,11 @@
-<h3 class="text-4xl font-bold mb-10 text-center text-gray-900">
-  Nuestros servicios
-</h3>
+<div class="flex items-center justify-center mb-20 mx-auto">
+  <!-- Modifica esta línea -->
+  <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+  <h3 class="text-4xl px-3 flex font-md text-main-red font-bold">
+    Nuestro servicios
+  </h3>
+  <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+</div>
 <p class="text-gray-600 text-center mb-10 text-xl">
   Brindamos una amplia gama de servicios de alta calidad para ti, asegurándote
   los mejores beneficios aquí.
