--- a/src/components/WelcomeSection.astro
+++ b/src/components/WelcomeSection.astro
@@ -57,11 +57,13 @@ import AudiLogo from "./logos/AudiLogo.astro";
 
 <section class="aos-init mb-10" data-aos="fade-up" data-aos-duration="1000">
   <div class="max-w-screen-xl px-4 pb-8 mx-auto lg:pb-16">
-    <h1
-      class="text-4xl mb-14 flex justify-center items-center text-center font-md mt-4 text-main-red font-bold"
-    >
-      Marcas
-    </h1>
+    <div class="flex items-center justify-center mb-20 mx-auto">
+      <!-- Modifica esta línea -->
+      <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+      <h1 class="text-4xl px-3 flex font-md text-main-red font-bold">Marcas</h1>
+      <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+    </div>
+
     <div
       class="grid grid-cols-2 gap-6 text-gray-400 sm:gap-12 sm:grid-cols-3 lg:grid-cols-6"
     >
