Falta el carrusel ronal xd

--- a/src/components/CardComentrary.astro
+++ b/src/components/CardComentrary.astro
@@ -10,90 +10,90 @@
 <div class="flex flex-wrap justify-center mx-4 mb-10">
   <!-- Tarjeta 1 -->
   <div
-    class="max-w-xs mx-10 my-4 bg-white rounded-xl shadow-md overflow-hidden blog"
+    class="max-w-xs mx-10 my-4 bg-white rounded-xl shadow-lg overflow-hidden blog"
   >
     <!-- ... (contenido de la tarjeta 1) ... -->
     <div class="flex items-center p-4">
       <img
-        class="w-10 h-10 rounded-full mr-4"
+        class="w-10 h-10 p-1 rounded-full ring-2 ring-gray-300 dark:ring-main-red"
         src="../../public/img/pro.jpg"
-        alt="Rounded avatar"
+        alt="Bordered avatar"
       />
       <div>
         <div
-          class="uppercase tracking-wide text-sm text-indigo-500 font-semibold"
+          class="uppercase tracking-wide text-sm text-main-blue font-semibold px-3"
         >
-          Órlaith Parastu
+          Noel Olvera Piña
         </div>
-        <p class="text-gray-500">Bought Tesla Model 3</p>
+        <p class="text-gray-500 px-3">Compre un Tesla Model 3</p>
       </div>
     </div>
     <div class="p-4">
       <p class="text-gray-500">
-        The Listing Was Hot (More Than 170 Bids). Everything Worked Well. We
-        Appreciated A Simple Process. Listing Page, Chat With A Seller, The
-        Auction, Escrow Service – Everything Was Great And We Didn’t Need
-        Anything On Top.
+        La oferta estaba muy demandada (más de 170 ofertas). Todo funcionó bien.
+        Apreciamos un proceso sencillo. La página de la oferta, el chat con el
+        vendedor, la subasta, el servicio de custodia, todo fue genial y no
+        necesitamos nada más.
       </p>
     </div>
   </div>
 
   <!-- Tarjeta 2 -->
   <div
-    class="max-w-xs mx-10 my-4 bg-white rounded-xl shadow-md overflow-hidden blog"
+    class="max-w-xs mx-10 my-4 bg-white rounded-xl shadow-lg overflow-hidden blog"
   >
-    <!-- ... (contenido de la tarjeta 2) ... -->
+    <!-- ... (contenido de la tarjeta 1) ... -->
     <div class="flex items-center p-4">
       <img
-        class="w-10 h-10 rounded-full mr-4"
+        class="w-10 h-10 p-1 rounded-full ring-2 ring-gray-300 dark:ring-main-red"
         src="../../public/img/pro.jpg"
-        alt="Rounded avatar"
+        alt="Bordered avatar"
       />
       <div>
         <div
-          class="uppercase tracking-wide text-sm text-indigo-500 font-semibold"
+          class="uppercase tracking-wide text-sm text-main-blue font-semibold px-3"
         >
-          Órlaith Parastu
+          Alberto Alarcon
         </div>
-        <p class="text-gray-500">Bought Tesla Model 3</p>
+        <p class="text-gray-500 px-3">Compre un Tesla Model 3</p>
       </div>
     </div>
     <div class="p-4">
       <p class="text-gray-500">
-        The Listing Was Hot (More Than 170 Bids). Everything Worked Well. We
-        Appreciated A Simple Process. Listing Page, Chat With A Seller, The
-        Auction, Escrow Service – Everything Was Great And We Didn’t Need
-        Anything On Top.
+        La oferta estaba muy demandada (más de 170 ofertas). Todo funcionó bien.
+        Apreciamos un proceso sencillo. La página de la oferta, el chat con el
+        vendedor, la subasta, el servicio de custodia, todo fue genial y no
+        necesitamos nada más.
       </p>
     </div>
   </div>
 
   <!-- Tarjeta 3 -->
   <div
-    class="max-w-xs mx-10 my-4 bg-white rounded-xl shadow-md overflow-hidden blog"
+    class="max-w-xs mx-10 my-4 bg-white rounded-xl shadow-lg overflow-hidden blog"
   >
-    <!-- ... (contenido de la tarjeta 3) ... -->
+    <!-- ... (contenido de la tarjeta 1) ... -->
     <div class="flex items-center p-4">
       <img
-        class="w-10 h-10 rounded-full mr-4"
+        class="w-10 h-10 p-1 rounded-full ring-2 ring-gray-300 dark:ring-main-red"
         src="../../public/img/pro.jpg"
-        alt="Rounded avatar"
+        alt="Bordered avatar"
       />
       <div>
         <div
-          class="uppercase tracking-wide text-sm text-indigo-500 font-semibold"
+          class="uppercase tracking-wide text-sm text-main-blue font-semibold px-3"
         >
-          Órlaith Parastu
+          Ronaldo Moctezuma
         </div>
-        <p class="text-gray-500">Bought Tesla Model 3</p>
+        <p class="text-gray-500 px-3">Compre un Tesla Model 3</p>
       </div>
     </div>
     <div class="p-4">
       <p class="text-gray-500">
-        The Listing Was Hot (More Than 170 Bids). Everything Worked Well. We
-        Appreciated A Simple Process. Listing Page, Chat With A Seller, The
-        Auction, Escrow Service – Everything Was Great And We Didn’t Need
-        Anything On Top.
+        La oferta estaba muy demandada (más de 170 ofertas). Todo funcionó bien.
+        Apreciamos un proceso sencillo. La página de la oferta, el chat con el
+        vendedor, la subasta, el servicio de custodia, todo fue genial y no
+        necesitamos nada más.
       </p>
     </div>
   </div>
@@ -103,6 +103,7 @@
   .blog {
     transition: transform 0.3s ease-in-out;
     cursor: pointer; /* o el color que tenga tu SVG en estado normal */
+    text-align: justify;
   }
 
   .blog:hover {
