--- a/src/components/CardsBlogs.astro
+++ b/src/components/CardsBlogs.astro
@@ -12,7 +12,7 @@
         class="mb-3 font-normal text-gray-500 dark:text-gray-400"
         style="text-align: justify;"
       >
-        Is the 2024 Porsche Cayenne S a Good SUV? 4 Pros and 3 Cons
+        ¿Es el Porsche Cayenne S 2024 una buena SUV? 4 Pros y 3 Contras
       </p>
     </div>
 
@@ -22,7 +22,7 @@
         class="mb-3 font-normal text-gray-500 dark:text-gray-400"
         style="text-align: justify;"
       >
-        Compact Steamroller: 2024 Toyota RAV4 Starts at $29,825
+        "Compacto y Potente: El Toyota RAV4 2024 comienza en $29,825"
       </p>
     </div>
 
