--- a/src/components/OurServies.astro
+++ b/src/components/OurServies.astro
@@ -1,9 +1,7 @@
 <div class="flex items-center justify-center mb-20 mx-auto">
   <!-- Modifica esta línea -->
   <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
-  <h3 class="text-4xl px-3 flex font-md text-main-red font-bold">
-    Nuestro servicios
-  </h3>
+  <h3 class="text-4xl px-3 flex font-md text-main-blue font-bold">Servicios</h3>
   <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
 </div>
 <p class="text-gray-600 text-center mb-10 text-xl">
