--- a/src/components/WelcomeSection.astro
+++ b/src/components/WelcomeSection.astro
@@ -14,9 +14,7 @@ import AudiLogo from "./logos/AudiLogo.astro";
   >
     <div class="mr-auto place-self-center lg:col-span-7">
       <h1
-        class="max-w-2xl text-main-blue mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl aos-init"
-        data-aos="fade-down"
-        data-aos-duration="1000"
+        class="max-w-2xl text-main-blue mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl"
       >
         Descubre la elegancia en cada detalle.
       </h1>
