--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import OurServies from "../components/OurServies.astro";
 import SectionCar from "@components/SectionCar.astro";
 import CardComentrary from "@components/CardComentrary.astro";
 import Login from "@components/Login.astro";
-import { ViewTransitions } from "astro:transitions";
+//import { ViewTransitions } from "astro:transitions";
 ---
 
 <!doctype html>
@@ -26,7 +26,7 @@ import { ViewTransitions } from "astro:transitions";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <ViewTransitions />
+    <!-- <ViewTransitions /> -->
   </head>
 
   <body class="relartive text-white dark:text-white">
