Avance: Fondo , carrusel medio y animaciones

--- a/src/components/SectionCar.astro
+++ b/src/components/SectionCar.astro
@@ -9,7 +9,7 @@ import FrontArrow from "./icons/FrontArrow.astro";
     alt="Electric SUV"
   />
   <figcaption class="p-14 md:w-1/2">
-    <h2 class="text-4xl font-bold py-16 text-black">EVs For Everyone</h2>
+    <h2 class="text-4xl font-bold py-16 text-main-red">EVs For Everyone</h2>
     <p class="text-black text-wrapp mt-4 mb-9">
       We Provide Many Of The Best Services For You And You Will Get The Best
       Benefits Here
