--- a/public/styles.css
+++ b/public/styles.css
@@ -1,34 +1,37 @@
 .swiper {
-    width: 680px;
-    height: 460px;
+  width: 880px;
+  height: 460px;
+  background-color: rgb(237, 230, 230);
+  align-items: center;
 }
 
 .swiper-slide {
-    text-align: center;
-    font-size: 18px;
+  text-align: center;
+  font-size: 18px;
 
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  display: block;
+  width: 300px;
+  height: 300px;
+  border-radius: 20px;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .swiper-slide {
-    width: 80%;
+  width: 100%;
 }
 
 .swiper-slide:nth-child(2n) {
-    width: 80%;
+  width: 80%;
 }
 
 .swiper-slide:nth-child(3n) {
-    width: 80%;
+  width: 80%;
 }
