--- a/src/components/CardComentrary.astro
+++ b/src/components/CardComentrary.astro
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-center mb-10 mx-auto">
   <!-- Modifica esta línea -->
   <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
-  <h3 class="text-4xl px-3 flex font-md text-main-blue font-bold">
+  <h3 class="text-4xl px-3 flex font-md text-main-red font-bold">
     Comentarios
   </h3>
   <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
