--- a/src/components/CardsBlogs.astro
+++ b/src/components/CardsBlogs.astro
@@ -2,11 +2,13 @@
   <div class="flex items-center justify-center mb-20 mx-auto">
     <!-- Modifica esta línea -->
     <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
-    <h3 class="text-4xl px-3 flex font-md text-main-blue font-bold">Blogs</h3>
+    <h3 class="text-4xl px-3 flex font-md text-main-red font-bold">Blogs</h3>
     <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
   </div>
   <div class="flex flex-wrap justify-center gap-4 mb-10 bg-gray-100">
-    <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
+    <div
+      class="max-w-sm p-2 border border-gray-100 rounded-lg shadow-lg fade fade-up"
+    >
       <img class="rounded-lg mb-5" src="../../public/img/ch-2.webp" alt="" />
       <p
         class="mb-3 font-normal text-gray-500 dark:text-gray-400"
@@ -16,7 +18,9 @@
       </p>
     </div>
 
-    <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
+    <div
+      class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg fade fade-up"
+    >
       <img class="rounded-lg mb-5" src="../../public/img/ch-1.webp" alt="" />
       <p
         class="mb-3 font-normal text-gray-500 dark:text-gray-400"
@@ -26,7 +30,9 @@
       </p>
     </div>
 
-    <div class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg card">
+    <div
+      class="max-w-sm p-2 border border-gray-200 rounded-lg shadow-lg fade fade-up"
+    >
       <img class="rounded-lg mb-5" src="../../public/img/ch-3.webp" alt="" />
       <p
         class="mb-3 font-normal text-gray-500 dark:text-gray-400"
@@ -41,10 +47,45 @@
   .card {
     background: transparent; /* Color de fondo con opacidad */
     backdrop-filter: blur(10px); /* Efecto de desenfoque */
-    transition: transform 0.2s ease-in-out;
+  }
+  .fade {
+    background: white; /* Color de fondo con opacidad */
+    backdrop-filter: blur(10px); /* Efecto de desenfoque */
+    transition: transform 0.4s ease-in-out;
+    opacity: 0;
+    transition:
+      opacity 0.9s ease-in-out,
+      transform 0.9s ease-in-out;
   }
 
-  .card:hover {
-    transform: translateY(-19px);
+  .fade-up {
+    transform: translateY(-80px);
+  }
+
+  .fade.active {
+    opacity: 1;
+    transform: translateX(0);
   }
 </style>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const fadeElements = document.querySelectorAll(".fade");
+
+    function checkFadeElements() {
+      fadeElements.forEach((fadeElement) => {
+        const top = fadeElement.getBoundingClientRect().top;
+        const windowHeight = window.innerHeight;
+
+        if (top < windowHeight) {
+          fadeElement.classList.add("active");
+        }
+      });
+    }
+
+    // Verifica al cargar la página
+    checkFadeElements();
+
+    // Verifica al hacer scroll
+    document.addEventListener("scroll", checkFadeElements);
+  });
+</script>
