--- a/src/components/OurServies.astro
+++ b/src/components/OurServies.astro
@@ -1,7 +1,11 @@
-<div class="flex items-center justify-center mb-20 mx-auto">
+<div class="flex bg-transparent items-center justify-center mb-20 mx-auto">
   <!-- Modifica esta línea -->
-  <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
-  <h3 class="text-4xl px-3 flex font-md text-main-blue font-bold">Servicios</h3>
+  <div class="w-20 mx-1 border-b-2 border-gray-300 bg-transparent"></div>
+  <h3
+    class="fade fade-up bg-transparent text-4xl px-3 flex font-md text-main-red font-bold"
+  >
+    Servicios
+  </h3>
   <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
 </div>
 <p class="text-gray-600 text-center mb-10 text-xl">
@@ -9,7 +13,7 @@
   los mejores beneficios aquí.
 </p>
 <div class="flex flex-wrap justify-center gap-4 py-4">
-  <div class="max-w-sm p-6 rounded-lg shadow-lg card">
+  <div class="fade fade-left max-w-sm p-6 rounded-lg shadow-lg">
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
       viewBox="0 0 24 24"
@@ -81,11 +85,10 @@
   </div>
 
   <div
-    class="max-w-sm
+    class="fade fade-down max-w-sm
         p-6
         rounded-lg
-        shadow-lg
-        card"
+        shadow-lg"
   >
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
@@ -140,7 +143,7 @@
     </p>
   </div>
 
-  <div class="max-w-sm p-6 rounded-lg shadow-lg card">
+  <div class="fade fade-right max-w-sm p-6 rounded-lg shadow-lg">
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
       viewBox="0 0 40 40"
@@ -195,13 +198,74 @@
 </div>
 
 <style>
-  .card {
+  .fade {
     background: white; /* Color de fondo con opacidad */
     backdrop-filter: blur(10px); /* Efecto de desenfoque */
     transition: transform 0.4s ease-in-out;
+    opacity: 0;
+    transition:
+      opacity 0.9s ease-in-out,
+      transform 0.9s ease-in-out;
   }
-
-  .card:hover {
+  .fade:hover {
     transform: translateY(-19px);
   }
+
+  .fade-left {
+    transform: translateX(-80px); /* Ajusta el valor según tu preferencia */
+  }
+
+  .fade-right {
+    transform: translateX(80px); /* Ajusta el valor según tu preferencia */
+  }
+  .fade-up {
+    transform: translateY(-80px);
+  }
+
+  .fade-down {
+    transform: translateY(80px);
+  }
+
+  .fade.active {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  .flip-left {
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: transform 0.5s ease-in-out;
+    transform-origin: left center;
+  }
+
+  .flip-left.active {
+    transform: rotateY(0);
+  }
+
+  .flip-left .card {
+    transform: rotateY(-180deg);
+  }
 </style>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const fadeElements = document.querySelectorAll(".fade");
+
+    function checkFadeElements() {
+      fadeElements.forEach((fadeElement) => {
+        const top = fadeElement.getBoundingClientRect().top;
+        const windowHeight = window.innerHeight;
+
+        if (top < windowHeight) {
+          fadeElement.classList.add("active");
+        }
+      });
+    }
+
+    // Verifica al cargar la página
+    checkFadeElements();
+
+    // Verifica al hacer scroll
+    document.addEventListener("scroll", checkFadeElements);
+  });
+</script>
