--- a/src/components/WelcomeSection.astro
+++ b/src/components/WelcomeSection.astro
@@ -14,7 +14,7 @@ import AudiLogo from "./logos/AudiLogo.astro";
   >
     <div class="mr-auto place-self-center lg:col-span-7">
       <h1
-        class="fade fade-left max-w-2xl text-main-blue mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl"
+        class="fade fade-left max-w-2xl text-main-red mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl"
       >
         Descubre la elegancia en cada detalle.
       </h1>
