--- a/src/layouts/HeaderNav.astro
+++ b/src/layouts/HeaderNav.astro
@@ -15,7 +15,7 @@ import CarShopIcon from "../components/icons/CarShopIcon.astro";
         <a
           href="#"
           type="button"
-          class="text-white bg-[#100E34] hover:bg-bg-[#100E34] focus:outline-none font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-[#a2001e] dark:hover:bg-[#BE0022]"
+          class="text-white bg-[#a2001e] hover:bg-[#BE0022] focus:outline-none font-medium rounded-lg text-sm px-4 py-2 text-center"
         >
           Iniciar Sesión
         </a>
@@ -48,12 +48,12 @@ import CarShopIcon from "../components/icons/CarShopIcon.astro";
         id="navbar-cta"
       >
         <ul
-          class="flex flex-col text-md font-semibold p-4 md:p-0 mt-4 border border-gray-700 rounded-lg bg-gray-700 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:border-gray-700"
+          class="flex flex-col text-md font-semibold p-4 md:p-0 mt-4 border border-gray-700 rounded-lg bg-gray-700 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent"
         >
           <li>
             <a
               href="#"
-              class="block py-2 px-3 md:p-0 bg-blue-100 rounded md:bg-transparent md:dark:text-gray-400 hover:text-blue-700"
+              class="block py-2 px-3 text-main-blue md:p-0 rounded hover:text-main-red"
               aria-current="page"
             >
               Inico
@@ -62,7 +62,7 @@ import CarShopIcon from "../components/icons/CarShopIcon.astro";
           <li>
             <a
               href="#"
-              class="block py-2 px-3 md:p-0 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-gray-400 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+              class="block py-2 px-3 text-main-blue md:p-0 rounded hover:text-main-red"
             >
               Catalogo
             </a>
