--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,14 +6,16 @@ import HeaderNav from "./HeaderNav.astro";
 const { title } = Astro.props;
 import Footer from "./Footer.astro";
 import "@fontsource-variable/onest";
-import { CarrouselGallery } from "@components/CarrouselGallery";
 import WelcomeSection from "../components/WelcomeSection.astro";
 import CardsBlogs from "../components/CardsBlogs.astro";
 import OurServies from "../components/OurServies.astro";
 import SectionCar from "@components/SectionCar.astro";
 import CardComentrary from "@components/CardComentrary.astro";
 import Login from "@components/Login.astro";
-//import { ViewTransitions } from "astro:transitions";
+import { ViewTransitions } from "astro:transitions";
+import { CarrouselGallery } from "@components/CarrouselGallery";
+import BackgroundBubles from "@components/BackgroundBubles.astro";
+import Carrusel from "@components/Carrusel.astro";
 ---
 
 <!doctype html>
@@ -25,14 +27,13 @@ import Login from "@components/Login.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <!-- <ViewTransitions /> -->
+    <ViewTransitions />
   </head>
 
-  <body class="relartive text-white dark:text-white">
+  <body class="relartive text-white">
     <div class="absolute top-0 -z-10 h-full w-full bg-white">
-      <div
-        class="absolute bottom-auto left-auto right-0 top-0 h-[500px] w-[500px] -translate-x-[170%] translate-y-[20%] rounded-full bg-[#9ddfe0] opacity-60 blur-[95px]"
-      >
+      <div>
+        <BackgroundBubles />
       </div>
     </div>
     <header>
@@ -40,20 +41,12 @@ import Login from "@components/Login.astro";
     </header>
     <main>
       <section>
-        <div
-          class="absolute bottom-auto left-auto right-0 top-0 h-[300px] w-[300px] -translate-x-[-10%] translate-y-[300%] rounded-full bg-[#E6C1E3] opacity-60 blur-[95px]"
-        >
-        </div>
         <WelcomeSection />
       </section>
-      <section class="bg-gray-100">
-        <article class="mb-24 mt-4">
-          <CarrouselGallery client:visible />
-        </article>
-      </section>
+      <section class="bg-gray-100"></section>
       <section>
         <div
-          class="absolute bottom-auto left-auto right-0 top-0 h-[400px] w-[400px] -translate-x-[250%] translate-y-[350%] rounded-full bg-gradient-to-br from-cyan-300 to-purple-700 opacity-60 blur-[95px]"
+          class="absolute bottom-auto left-auto right-0 top-0 h-[190px] w-[190px] -translate-x-[50%] translate-y-[900%] rounded-full bg-gradient-to-br from-cyan-300 to-purple-500 opacity-60 blur-[95px]"
         >
         </div>
         <OurServies />
@@ -62,10 +55,6 @@ import Login from "@components/Login.astro";
         <SectionCar />
       </section>
       <section>
-        <div
-          class="absolute bottom-auto left-auto right-0 top-0 h-[200px] w-[200px] -translate-x-[10%] translate-y-[1150%] rounded-full bg-gradient-to-br from-purple-500 to-red-500 opacity-60 blur-[95px]"
-        >
-        </div>
         <CardComentrary />
       </section>
       <section>
@@ -73,7 +62,7 @@ import Login from "@components/Login.astro";
       </section>
     </main>
     <footer>
-      <Footer class="py-8" />
+      <Footer />
     </footer>
 
     <style is:global>
