fix error logos and sections

--- a/src/components/OurServies.astro
+++ b/src/components/OurServies.astro
@@ -1,9 +1,9 @@
-<div class="flex bg-transparent items-center justify-center mb-20 mx-auto">
+<div
+  class="flex bg-transparent items-center justify-center mb-20 mx-auto bg-black"
+>
   <!-- Modifica esta línea -->
-  <div class="w-20 mx-1 border-b-2 border-gray-300 bg-transparent"></div>
-  <h3
-    class="fade fade-up bg-transparent text-4xl px-3 flex font-md text-main-red font-bold"
-  >
+  <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+  <h3 class="fade fade-up text-4xl px-3 flex font-md text-main-red font-bold">
     Servicios
   </h3>
   <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
@@ -13,7 +13,7 @@
   los mejores beneficios aquí.
 </p>
 <div class="flex flex-wrap justify-center gap-4 py-4">
-  <div class="fade fade-left max-w-sm p-6 rounded-lg shadow-lg">
+  <div class="fade fade-left max-w-sm p-6 rounded-lg shadow-lg bg-white">
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
       viewBox="0 0 24 24"
@@ -69,13 +69,13 @@
         stroke-linecap="round"
         stroke-linejoin="round"></path>
     </svg>
-    <a href="#">
-      <h5
-        class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-center"
-      >
-        Compras y Ventas
-      </h5>
-    </a>
+
+    <h5
+      class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-center"
+    >
+      Compras y Ventas
+    </h5>
+
     <p
       class="mb-3 font-normal text-gray-500 dark:text-gray-400 text-justify mt-6"
     >
@@ -88,7 +88,7 @@
     class="fade fade-down max-w-sm
         p-6
         rounded-lg
-        shadow-lg"
+        shadow-lg bg-white"
   >
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
@@ -128,13 +128,12 @@
         stroke-linejoin="round"></path>
     </svg>
 
-    <a href="#">
-      <h5
-        class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-center"
-      >
-        Pago sencillo
-      </h5>
-    </a>
+    <h5
+      class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-center"
+    >
+      Pago sencillo
+    </h5>
+
     <p
       class="mb-3 font-normal text-gray-500 dark:text-gray-400 text-justify mt-6"
     >
@@ -143,7 +142,7 @@
     </p>
   </div>
 
-  <div class="fade fade-right max-w-sm p-6 rounded-lg shadow-lg">
+  <div class="fade fade-right max-w-sm p-6 rounded-lg shadow-lg bg-white">
     <svg
       class="w-9 h-9 mb-3 mx-auto text-center"
       viewBox="0 0 40 40"
@@ -181,13 +180,11 @@
         stroke-linecap="round"
         stroke-linejoin="round"></path>
     </svg>
-    <a href="#">
-      <h5
-        class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-center"
-      >
-        Fácil de usar
-      </h5>
-    </a>
+    <h5
+      class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-center"
+    >
+      Fácil de usar
+    </h5>
     <p
       class="mb-3 font-normal text-gray-500 dark:text-gray-400 text-justify mt-6"
     >
@@ -199,7 +196,6 @@
 
 <style>
   .fade {
-    background: white; /* Color de fondo con opacidad */
     backdrop-filter: blur(10px); /* Efecto de desenfoque */
     transition: transform 0.4s ease-in-out;
     opacity: 0;
