--- a/src/components/SectionCar.astro
+++ b/src/components/SectionCar.astro
@@ -4,7 +4,7 @@ import FrontArrow from "./icons/FrontArrow.astro";
 
 <figure class="md:flex mt-24 mb-24">
   <img
-    class="w-full h-120 md:w-1/2 object-cover rounded-r-lg"
+    class="w-full h-120 md:w-1/2 object-cover rounded-r-lg shadow-xl"
     src="../../public/img/ch-2.webp"
     alt="Electric SUV"
   />
@@ -16,8 +16,7 @@ import FrontArrow from "./icons/FrontArrow.astro";
     </p>
     <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
       <a
-        href="https://github.com/themesberg/landwind"
-        class="inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-white-900 border rounded-full sm:w-auto hover:bg-black-300 bg-main-blue"
+        class="inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-white-900 rounded-full sm:w-auto hover:bg-black-300 bg-main-blue"
       >
         Ordena ahora!
         <FrontArrow />
