--- a/src/components/WelcomeSection.astro
+++ b/src/components/WelcomeSection.astro
@@ -30,7 +30,7 @@ import AudiLogo from "./logos/AudiLogo.astro";
       <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
         <a
           href="https://github.com/themesberg/landwind"
-          class="fade fade-down inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-white-900 border rounded-full sm:w-auto hover:bg-black-300 bg-main-blue"
+          class="fade fade-down inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-white-900 rounded-full sm:w-auto hover:bg-black-300 bg-main-blue"
         >
           Ordena ahora!
           <FrontArrow />
