--- a/src/components/logos/FerrariLogo.astro
+++ b/src/components/logos/FerrariLogo.astro
@@ -4,7 +4,7 @@
   width="2500"
   height="2500"
   viewBox="0 0 192.744 192.744"
-  ><path fill="#fff" d="M0 0h192.744v192.744H0z"></path><path
+  ><path fill="none" d="M0 0h192.744v192.744H0z"></path><path
     stroke="#000"
     stroke-width=".216"
     stroke-miterlimit="2.613"
@@ -24,7 +24,7 @@
     stroke-width=".216"
     stroke-miterlimit="2.613"
     d="M84.628 5.899l.055-.129"></path><path
-    fill="#fff"
+    fill="none"
     stroke="#000"
     stroke-width=".216"
     stroke-miterlimit="2.613"
