--- a/src/layouts/HeaderNav.astro
+++ b/src/layouts/HeaderNav.astro
@@ -15,7 +15,7 @@ import CarShopIcon from "../components/icons/CarShopIcon.astro";
         <a
           href="#"
           type="button"
-          class="text-white bg-[#a2001e] hover:bg-[#BE0022] focus:outline-none font-medium rounded-lg text-sm px-4 py-2 text-center"
+          class="text-white bg-[#a2001e] hover:bg-[#BE0022] focus:outline-none font-medium rounded-full text-sm px-4 py-2 text-center"
         >
           Iniciar Sesión
         </a>
