--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,6 +55,11 @@ import Carrusel from "@components/Carrusel.astro";
         <SectionCar />
       </section>
       <section>
+        <article>
+          <CarrouselGallery client:visible />
+        </article>
+      </section>
+      <section>
         <CardComentrary />
       </section>
       <section>
