--- a/src/components/CardsBlogs.astro
+++ b/src/components/CardsBlogs.astro
@@ -1,11 +1,11 @@
-<section class="bg-gray-100 py-8">
+<section class="py-14">
   <div class="flex items-center justify-center mb-20 mx-auto">
     <!-- Modifica esta línea -->
-    <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+    <div class="w-20 mx-1 border-b-2"></div>
     <h3 class="text-4xl px-3 flex font-md text-main-red font-bold">Blogs</h3>
-    <div class="w-20 mx-1 border-b-2 border-gray-300"></div>
+    <div class="w-20 mx-1 border-b-2"></div>
   </div>
-  <div class="flex flex-wrap justify-center gap-4 mb-10 bg-gray-100">
+  <div class="flex flex-wrap justify-center gap-4 mb-10">
     <div
       class="max-w-sm p-2 border border-gray-100 rounded-lg shadow-lg fade fade-up"
     >
@@ -44,13 +44,8 @@
   </div>
 </section>
 <style>
-  .card {
-    background: transparent; /* Color de fondo con opacidad */
-    backdrop-filter: blur(10px); /* Efecto de desenfoque */
-  }
   .fade {
     background: white; /* Color de fondo con opacidad */
-    backdrop-filter: blur(10px); /* Efecto de desenfoque */
     transition: transform 0.4s ease-in-out;
     opacity: 0;
     transition:
