--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -2,7 +2,7 @@
 import CarShopIcon from "../components/icons/CarShopIcon.astro";
 ---
 
-<footer>
+<footer class="mt-28">
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
     <div class="md:flex md:justify-between">
       <div class="mb-6 md:mb-0">
