--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,9 @@
 .swiper {
-  width: 880px;
+  width: 100%;
   height: 460px;
-  align-items: center;
+  max-width: 1200px;
+  margin-bottom: 150px;
+  margin-top: 150px;
 }
 
 .swiper-slide {
@@ -16,21 +18,8 @@
 
 .swiper-slide img {
   display: block;
-  width: 300px;
-  height: 300px;
-  border-radius: 20px;
-  object-fit: cover;
-  z-index: -1;
-}
-
-.swiper-slide {
   width: 100%;
-}
-
-.swiper-slide:nth-child(2n) {
-  width: 80%;
-}
-
-.swiper-slide:nth-child(3n) {
-  width: 80%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
 }
